2005-07-23  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-07-23  Bruno coudoin  <bruno.coudoin@free.fr>

	Improved contextuality in user module
	Added a default class and it's all group for Unassigned users
	When user are removed from a class, there are moved there automatically.

	* src/boards/python/admin/class_edit.py:
	* src/boards/python/admin/class_list.py:
	* src/boards/python/admin/group_edit.py:
	* src/boards/python/admin/group_list.py:
	* src/boards/python/admin/profile_list.py:
	* src/boards/python/admin/user_list.py:
	* src/gcompris/gcompris_db.c: (gcompris_db_init):

2005-07-23  Yves Combe  <yves@ycombe.net>

	add gcompris_get_conf(profile, board) to get confs in conguration mode.
	tuxpaint launcher configuration is now working ! Yeah!

	* src/boards/py-mod-gcompris.c: (py_gcompris_get_conf),
	(py_gcompris_set_board_conf):
	* src/boards/python/tuxpaint.py:
	* src/gcompris/gcompris_db.c: (gcompris_get_conf),
	(gcompris_get_board_conf):
	* src/gcompris/gcompris_db.h:

2005-07-22  Yves Combe  <yves@ycombe.net>

	board config_start function now launched correctly. Example is in tuxpaint.py
	
	* src/boards/py-mod-admin.c: (py_board_config_start):
	* src/boards/python.c: (pythonboard_config_start):
	* src/boards/python/admin/board_list.py:
	* src/boards/python/tuxpaint.py:
	* src/gcompris/board_config.c: (board_config_start):
	* src/gcompris/board_config.h:
	* src/gcompris/plugin.h:

>>>>>>> 1.526
2005-07-22  Yves Combe  <yves@ycombe.net>

	Connect treeview signal to allow usage of pref button
	Add pref icon in treeview if board is configurable
	gcompris_load_menus_* skip boards listed in profile unactivated activities. (Works !)

	* src/boards/python/admin/board_list.py:
	* src/boards/python/tuxpaint.py:
	* src/gcompris/gameutil.c: (compare_id), (gcompris_load_menus_dir),
	(gcompris_load_menus):

2005-07-21  Bruno coudoin  <bruno.coudoin@free.fr>

	Added 3 new background musics (classical music).
