@@ -45,23 +45,5 @@ About You:
 -------------------------------------------------------------------------------
                            NOTE TO TRANSLATORS
 
-GCompris is a little bit special in terms of translation needs. The best is
-done to bring back everything to .po files but it is not exhaustive.
-
-To complete the translation, you must also provide:
-
-A set of file in boards/wordsgame/wordslevelx.yy
-Where x is the level or max and yy your target locale.
-Note that these words must be choosen to be simple in your language, don't
-necessary translate the English. Also, it is important to make sure that
-these words can be written with your keyboard in one key (no alt-gr stuff or
-compose key).
-
-A complete voice translation in boards/sounds/yy
-It is best to choose somebody that speaks and articulate well your language.
-What is great with GCompris is that you can use it to practice a foreign
-language.
-
-For the falling letters activity, there is a special directory to look at in
-boards/gletters/README.
-It let you configure this activity for any 'non standard' keyboard.
+Read the po/TRANSLATORS.README to get additional information on GCompris
+translation.
