@@ -125,6 +125,11 @@
    <_Credits>All these images taken from GKB Keyboard Switcher applet</_Credits>
    <Categories>flags</Categories>
   </Asset>
+  <Asset file="ne.png" mimetype="image/png">
+   <_Description>Nepal</_Description>
+   <_Credits>Taken from the CIA database</_Credits>
+   <Categories>flags</Categories>
+  </Asset>
   <Asset file="nl.png" mimetype="image/png">
    <_Description>Dutch</_Description>
    <_Credits>All these images taken from GKB Keyboard Switcher applet</_Credits>
