@@ -482,7 +482,7 @@ VERSION_VOICES_MISC_SV=1.0
 AC_SUBST(VERSION_VOICES_MISC_SV)
 
 #FLAGS
-VERSION_FLAGS=1.8
+VERSION_FLAGS=1.9
 AC_SUBST(VERSION_FLAGS)
 
 AC_SUBST(CFLAGS)
