@@ -1,3 +1,13 @@
+2005-07-23  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Completed support for Nepal
+
+	* README: moved translators info in po/TRANSLATORS.README
+	* boards/flags/gcompris_flags.assetml.in:
+	* po/TRANSLATORS.README: created.
+	* src/gcompris/config.c: 
+	* configure.in: flags version is now 1.9
+
 2005-07-23  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* configure.in: Added ne in ALL_LINGUAS
